--- a/.github/workflows/main_web-lab-boris.yml
+++ b/.github/workflows/main_web-lab-boris.yml
@@ -28,7 +28,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ./publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -65,3 +65,4 @@ jobs:
           package: .
 
           
+
