--- a/.github/workflows/main_web-lab-boris.yml
+++ b/.github/workflows/main_web-lab-boris.yml
@@ -27,14 +27,15 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ./publish
+    - name: dotnet publish
+  run: dotnet publish -c Release -o ./publish
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+- name: Upload artifact for deployment job
+  uses: actions/upload-artifact@v4
+  with:
+    name: .net-app
+    path: ./publish
+
 
   deploy:
     runs-on: ubuntu-latest
@@ -65,4 +66,5 @@ jobs:
           package: .
 
           
+
 
