--- a/.github/workflows/main_web-lab-boris.yml
+++ b/.github/workflows/main_web-lab-boris.yml
@@ -13,43 +13,43 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # Required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-    - name: dotnet publish
-  run: dotnet publish -c Release -o ./publish
+      - name: Publish with dotnet
+        run: dotnet publish -c Release -o ./publish
 
-- name: Upload artifact for deployment job
-  uses: actions/upload-artifact@v4
-  with:
-    name: .net-app
-    path: ./publish
-
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: .net-app
+          path: ./publish
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # Required for Azure login
+      contents: read # Required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+          path: ./artifact
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -58,13 +58,8 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_80C033AE15C04B3F83ABE97E94F8C870 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'web-lab-boris'
           slot-name: 'Production'
-          package: .
-
-          
-
-
+          package: ./artifact
